--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.9.6",
     "react-scripts": "5.0.1"
   },
-  "devDependencies": {},
   "engines": {
     "node": ">=18.0.0"
   },
